# avx

./: CMakeLists.txt  README.md  runner.cpp
.github/workflows/: cmake-single-platform.yml
include/: dot.hpp  ukernels.h
src/: dot.cpp
tests/: test_dotop.cpp  test_main.cpp
